@@ -4,7 +4,7 @@ Tests numeric values: Floating point
 a { font:10px Arial, sans-serif}
 b { font:10px "Arial", "Trebuchet MS","sans-serif"}
 em { font:10px/normal "Arial", "Trebuchet MS","sans-serif"}
-i { font:10px/1.5em "Arial", "Trebuchet MS","sans-serif"}
+i { font:10px/1.5em "Arial", 'Trebuchet MS',"sans-serif"}
 --EXPECT--
 array (
   'a' =>
