@@ -28,6 +28,7 @@ Key: # = backwards incompatible change, ! = new feature, - = bugfix.
 ! Properly sorting IE 6 and 7 hack properties (thanks weikinhuang)
 ! Support for CSS3 animations
 ! Support for optimizing colors inside gradient function
+! Normalize all possible single quotes to double quotes (for smaller gzipped file)
 - Added localizations for css_optimiser.php
 - Fixed bug with cookie setting for custom templates
 - Minor security problem in css_optimiser.php fixed
